[gd_scene load_steps=4 format=3 uid="uid://cuj12ljm57cey"]

[ext_resource type="Script" path="res://Scripts/level_menu.gd" id="1_4e80x"]
[ext_resource type="Texture2D" uid="uid://b22u21o23jdy8" path="res://Scenes/main_menu_texture.tres" id="2_gmqmb"]
[ext_resource type="FontFile" uid="uid://cnljrs73u3u8k" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="3_i5q71"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4e80x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gmqmb")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 64
text = "
Levels"
horizontal_alignment = 1
autowrap_mode = 2

[node name="GridContainer" type="GridContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -125.0
offset_right = 331.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 30
columns = 2

[node name="Level 0" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 48
text = "Level 0"

[node name="Level 1" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 48
text = "Level 1"

[node name="Level 2" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 48
text = "Level 2"

[node name="Level 3" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 48
text = "Level 3"

[node name="Level 4" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 48
text = "Level 4"

[node name="Level 5" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 48
text = "Level 5
"

[node name="Level 6" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 48
text = "Level 6"

[node name="Level 7" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 48
text = "Level 7"

[node name="Level 8" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 48
text = "Level 8"

[node name="Level 9" type="Button" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 48
text = "Level 9"

[node name="Return" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 29.0
offset_right = 231.0
offset_bottom = 69.0
theme_override_fonts/font = ExtResource("3_i5q71")
theme_override_font_sizes/font_size = 32
text = "Return"

[connection signal="pressed" from="TextureRect/GridContainer/Level 0" to="." method="_on_level_0_pressed"]
[connection signal="pressed" from="TextureRect/GridContainer/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="TextureRect/GridContainer/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="TextureRect/GridContainer/Level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="TextureRect/GridContainer/Level 4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="TextureRect/GridContainer/Level 5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="TextureRect/GridContainer/Level 6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="TextureRect/GridContainer/Level 7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="TextureRect/GridContainer/Level 8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="TextureRect/GridContainer/Level 9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
