extends Control

func _on_level_0_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Levels/level_0.tscn")


func _on_level_1_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Levels/level_1.tscn")


func _on_level_2_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Levels/level_2.tscn")


func _on_level_3_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Levels/level_3.tscn")


func _on_level_4_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Levels/level_4.tscn")


func _on_level_5_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Levels/level_5.tscn")


func _on_level_6_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Levels/level_6.tscn")


func _on_level_7_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Levels/level_7.tscn")


func _on_level_8_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Levels/level_8.tscn")


func _on_level_9_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/Levels/level_9.tscn")

func _on_return_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/main_menu.tscn")
